--- a/LECTURE/DAY30/vue-comp/index.html
+++ b/LECTURE/DAY30/vue-comp/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>vue-comp</title>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bulma/0.4.4/css/bulma.min.css">
 </head>
 <body>
   <div id="app"></div>
