--- a/LECTURE/DAY30/vue-comp/index.html
+++ b/LECTURE/DAY30/vue-comp/index.html
@@ -7,6 +7,9 @@
   <title>vue-comp</title>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bulma/0.4.4/css/bulma.min.css">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+   <script src="//unpkg.com/jquery"></script>
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js""></script> -->
 </head>
 <body>
   <div id="app"></div>
